##Change Log- Add your changes to this so we know what each others changed.

5/12/15 - 16:53 Removed(commented out) the default action in controller. This was calling function default action in event nothing was sent
via the action  in index(+ other pages) This was trying to connect to the users table . We dont want this.

5/12/15 12:03 Changed login form to be Class Form-Horizontal. Made 2 Buttons called Register and forgot password.
Register links to register page.

6/12/15 12:39 Removed the old register button. Changed the register page which says "Talk about yourself",
to include a password instead.

6/12/15 18:30 - Login success function added in controller folder.
                -called in controller.
8/12/15 18:35 - user is able to enter register succesfully.
8/12/15 20:00 -md5 working on passwords
8/12/15 20:10 - added html headers and html footer file and included them into the existing files
                - From now on , on new pages just include the headers instead of re-creating the code.

10/12/15 00:29 - Changed the Register(#286090) and Forgot password(#c9302c) buttons colours
10/12/15 00:32 - Bug fix on the controller.
10/12/15 17:28 - login page had a small bug
10/12/15 17:30 - Added a register page and register template
10/12/15 19:25 - Changed forgot a password requirements
10/12/15 23:32 - Login working - Set up sessions. all okay. This was done by having it so that usersDAO called fxn in sessions file.
10/12/15 23:32 -sessions.php file is in DAO folder. Prob should be a controller. this is  a work arround. In the spirt of MVC , should be called by controller

11/12/15 20:36 Buttons added to allow user to login (forgot password + register pages)
11/12/15 20:45 Forgot password now has 3 fields instead of 2
11/12/15 20:55 Home page has  temporary placeholders now
11/12/15 21:06 Navbar for logged in user added.