@@ -23,3 +23,5 @@
 // todo add new part backend
 //todo display existing parts in form.
 //todo ..add more todos.
+//todo place email vallidation on all email inputs
+todo is password wrong.
