@@ -17,7 +17,7 @@ define ( "DB_DEBUGMODE", true ); // set database charset
 define ( "TITLE_WEB_APP", "Web dev. & dep." );
 define ( "QUOTE", "Two things are infinite: the universe and human stupidity; and I'm not sure about the universe. (Enstein)" );
 define ( "FOOTER", "Name, surname, Student number - copyright" );
-define ( "ERROR_EXISTING_USER", " Errors in the inputs: correct them");
+define ( "BADEMAIL", " There is a problem with your email address. Please Correct");
 define ( "SUCCESS_UPDATE_USER", " The user has been succesfully updated");
 
 
