@@ -17,6 +17,7 @@
                             <h3>Login to our site</h3>
 
                             <p>Enter your username and password to log on:</p>
+                            <?php include ("bademail.php")?>
                         </div>
                         <div class="form-top-right">
                             <i class="fa fa-key"></i>
