@@ -28,3 +28,5 @@ to include a password instead.
 11/12/15 20:45 Forgot password now has 3 fields instead of 2
 11/12/15 20:55 Home page has  temporary placeholders now
 11/12/15 21:06 Navbar for logged in user added.
+16/12/15 1:20 I have email validation working. I still have to include it forgot pw(when ready) and register.
+16/12/15 1:20 To get it working on other pages. call fxn in controller.(such as update) is isemailvalid() and on template page include bademail.php
